@@ -15,6 +15,20 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
 
+var incubatorArguments = listOf("--enable-preview", "--add-modules", "jdk.incubator.vector")
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs = options.compilerArgs + incubatorArguments
+}
+
+tasks.withType<Test> {
+    jvmArgs = incubatorArguments
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs = incubatorArguments
+}
+
 tasks.test {
     useJUnitPlatform()
 }
